<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_item_about"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_item_logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_item_exit"
        app:showAsAction="ifRoom" />

</menu>