<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_new"
        android:icon="@drawable/ic_add_new"
        android:title="@string/menu_item_add_new"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/add_new_incident"
                android:icon="@drawable/ic_incident_show_hide"
                android:title="@string/menu_item_add_new_incident"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/add_new_gas_station"
                android:icon="@drawable/ic_gas_station_show_hide"
                android:title="@string/menu_item_add_new_gas_station"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/show_hide"
        android:icon="@drawable/ic_show_hide"
        android:title="@string/menu_item_show_hide"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/show_hide_incident"
                android:icon="@drawable/ic_incident_show_hide"
                android:title="@string/menu_item_show_hide_incidents"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/show_hide_gasstation"
                android:icon="@drawable/ic_gas_station_show_hide"
                android:title="@string/menu_item_show_hide_gas_station"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/call_the_police"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="ifRoom" />

</menu>